[package]
name = "mbutiles"
version = "0.1.0"
authors = ["Arnaud Marant <arnaudmarant@gmail.com>"]
description = "MBUtiles is an utility in Rust, to generate MBTiles from tiles directories and extract tiles from MBTiles file"
homepage = "https://github.com/amarant/mbutiles"
repository = "https://github.com/amarant/mbutiles.git"
readme = "README.md"
keywords = ["mbtiles", "mbutil", "mbutiles", "geo", "gis"]
license = "BSD-3-Clause"
license-file = "LICENSE.md"

[dependencies]
docopt = "0.6"
rustc-serialize = "0.3"
rusqlite = "0.6.0"
walkdir = "0.1"
regex = "0.1"
stdio_logger = "0.1.1"
log = "0.3"
flate2 = "0.2"

[dev-dependencies]
jlens = "0.0.1"
