[package]
name = "mbutiles"
version = "0.1.1"
authors = ["Arnaud Marant <arnaudmarant@gmail.com>"]
description = "MBUtiles is an utility in Rust, to generate MBTiles from tiles directories and extract tiles from MBTiles file"
homepage = "https://github.com/amarant/mbutiles"
repository = "https://github.com/amarant/mbutiles.git"
readme = "README.md"
keywords = ["mbtiles", "mbutil", "mbutiles", "geo", "gis"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
docopt = "1.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rusqlite = { version = "0.31.0", features = ["bundled"] }
walkdir = "2.5.0"
regex = "1.10.4"
simplelog = "0.12.2"
log = "0.4.21"
flate2 = "1.0.28"
thiserror = "1.0.58"

[dev-dependencies]
serde_json_path = "0.6.7"
